Restructures the project, so that we can build a multi-release jar. Refactors the code, so that we choose whether we want to parse BigInteger- and BigDecimal-values in parallel.